@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.9
 
+	- Fixed wrong relative path when absolute path has a 
+	  trailing slash in fl_filename_relative (STR #1920)
 	- Fixed multiple selction of files and directories in
 	  Fl_File_Chooser (STR #1913)
 	- Fixed MSWindows crash when selecting umlauts
